--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <button class="twitter-button" id="twitter" title="Tweet This!">
         <i class="fa-brands fa-twitter"></i>
       </button>
-      <button id="new-quote">New Quote</button>
+      <button id="new-quote">New Quote!!</button>
     </div>
   </div> 
   <script src="script.js"></script>
